<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#36454f"
              android:clickable="true"
              android:orientation="vertical">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/baseline_content_unit"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/baseline_content_unit"
			android:background="@drawable/ic_user"
			android:layout_gravity="center_vertical"
			android:scaleType="fitXY"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/half_line_height"
			android:orientation="vertical">

			<TextView
				android:id="@+id/username"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="RAWR"
				android:textColor="@color/white"
				android:textSize="@dimen/text_heading_18sp"
				android:textStyle="bold"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="rawr@gmail.com"
				android:textColor="@color/white"
				android:textSize="@dimen/text_options_14sp"
				android:textStyle="italic"/>
		</LinearLayout>
	</LinearLayout>

	<View
		android:layout_width="fill_parent"
		android:layout_height="@dimen/fab_stroke_width"
		android:layout_marginTop="@dimen/fab_labels_margin"
		android:background="@color/white"/>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginEnd="@dimen/activity_horizontal_margin"
		android:layout_marginStart="@dimen/baseline_margin_unit"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/fab_actions_spacing"
			android:text="@string/drawerlayout_general_heading"
			android:textColor="@color/white"
			android:textSize="@dimen/text_heading_18sp"
			android:textStyle="bold"/>

		<View
			android:layout_width="fill_parent"
			android:layout_height="@dimen/fab_stroke_width"
			android:layout_marginBottom="@dimen/fab_labels_margin"
			android:layout_marginTop="@dimen/fab_labels_margin"
			android:background="@color/ColorPrimary"
			/>

		<!-- Layout wraps the General Section -->
		<LinearLayout
			android:id="@+id/generalWrapper"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:baselineAligned="false"
				android:orientation="horizontal">

				<LinearLayout
					android:id="@+id/homeLayout"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:clickable="true"
					android:orientation="horizontal"
					>

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@drawable/ic_radial_check"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="@dimen/baseline_content_unit"
						android:text="@string/drawerlayout_general_home"
						android:textColor="@color/white"
						android:textSize="@dimen/text_options_16sp"/>
				</LinearLayout>

				<LinearLayout
					android:id="@+id/logoutLayout"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:clickable="true"
					android:orientation="horizontal">

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@drawable/ic_radial_check"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="@dimen/baseline_content_unit"
						android:text="@string/drawerlayout_general_logout"
						android:textColor="@color/white"
						android:textSize="@dimen/text_options_16sp"/>
				</LinearLayout>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/advancedSearch"
				android:layout_width="fill_parent"
				android:layout_height="0dp"
				android:layout_marginTop="@dimen/fab_labels_margin"
				android:layout_weight="1"
				android:clickable="true"
				android:orientation="horizontal">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/ic_radial_check"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/baseline_content_unit"
					android:text="@string/drawerlayout_general_search"
					android:textColor="@color/white"
					android:textSize="@dimen/text_options_16sp"/>
			</LinearLayout>

			<View
				android:layout_width="fill_parent"
				android:layout_height="@dimen/fab_stroke_width"
				android:layout_marginBottom="@dimen/fab_labels_margin"
				android:layout_marginTop="@dimen/fab_labels_margin"
				android:background="@color/ColorPrimary"
				/>

		</LinearLayout>

		<!-- Layout wraps the Sources Section -->
		<LinearLayout
			android:id="@+id/sourcesWrapper"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/fab_actions_spacing"
				android:text="@string/drawerlayout_sources_heading"
				android:textColor="@color/white"
				android:textSize="@dimen/text_heading_18sp"
				android:textStyle="bold"/>

			<View
				android:layout_width="fill_parent"
				android:layout_height="@dimen/fab_stroke_width"
				android:layout_marginBottom="@dimen/fab_labels_margin"
				android:layout_marginTop="@dimen/fab_labels_margin"
				android:background="@color/ColorPrimary"
				/>

			<ListView
				android:id="@+id/sourceListView"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				/>

		</LinearLayout>
	</LinearLayout>
</LinearLayout>